// This is the command used to generate the Go code from this proto file.
// protoc -Ipb --go_out=./pb --go_opt=module=github.com/moly-space/molylibs/pb --go-grpc_out=./pb --go-grpc_opt=module=github.com/moly-space/molylibs/pb pb/file-service.proto

// The syntax for this file is proto3.
syntax = "proto3";

// The package for this file is hookservice.
package fileservice;

// The Go package for the generated code will be github.com/moly-space/molylibs/pb.
option go_package = "github.com/moly-space/molylibs/pb" ;

message TestRequest {
  string id = 1;
}

message TestResponse {
  string id = 1;
}

message DeleteFileRequest {
  string userID = 1;
  string orgID = 2;
  string uuID = 3;
}

message DeleteFileResponse {
  string id = 1;
}

service FileService {
  rpc Test (TestRequest) returns (TestResponse);
  rpc DeleteFile (DeleteFileRequest) returns (DeleteFileResponse);
}
